@@ -1,0 +1,2 @@
+This was an administration tool for the 'identification protocol'.
+Since the meta server changed, it move to OLD/.
