@@ -196,7 +196,6 @@ AC_CONFIG_FILES([Makefile			\
 	  src/tests/Makefile			\
 	  src/tools/Makefile			\
 	  src/tools/transmsg/Makefile		\
-	  src/tools/xident/Makefile		\
 	  src/tools/netflooder/Makefile		\
 	  src/tools/ftpclient/Makefile		\
 	  src/tools/hashsum/Makefile		\
