@@ -1093,7 +1093,8 @@
      and for 2011 (10).
      <A HREF="#UpNote014">Up</a><br>
 
-   <A NAME="Note015"></A>15. <code>IrrClient/</code>(2,218 SLOC) moved to 
+   <A NAME="Note015"></A>15. <code>IrrClient/</code> (2,218 SLOC) and 
+     <code>tools/xIdent</code> (3,082 SLOC) moved to 
      <code>../OLD</code> just before the release 214.
      <A HREF="#UpNote015">Up</a><br>
 <hr>
